--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,8 @@
 {
     "solana": {
-        "node_url": "NODE_URL"
+      "node_url": "https://CNAME.bdnodes.net/?auth=AUTH=TOKEN"
     },
     "postgres": {
-        "url": "postgresql://user:password@postgres/solana_blocks"
+      "url": "postgresql://user:password@localhost/solana_blocks"
     }
-}
+  }
